--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </header>
     <main class="main">
-        <section class="best">
+        <!-- <section class="best">
             <div class="container">
                 <h2 class="best__heading heading">Лучшие предложения рынка элитной недвижимости</h2>
                 <div class="best__swiper-wrapper">
@@ -185,7 +185,7 @@
                       </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <section class="premium">
             <div class="container">
                 <h2 class="heading premium__heading">Подборки премиальной недвижимости от наших экспертов</h2>
@@ -521,8 +521,152 @@
                 </div>
             </div>
         </section>
+        <section class="articles">
+            <div class="container">
+                <h2 class="articles__heading heading">Статьи</h2>
+                <div class="articles__content">
+                    <div class="articlesSwiper">
+                        <div class="swiper-wrapper">
+                          <div class="swiper-slide">
+                            <div class="articles__slide-img">
+                                <img src="./img/articles.jpg" alt="">
+                            </div>
+                            <div class="articles__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <p>Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.</p>
+                                <a href="#!">Читать статью полностью</a>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="articles__slide-img">
+                                <img src="./img/articles.jpg" alt="">
+                            </div>
+                            <div class="articles__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <p>Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.</p>
+                                <a href="#!">Читать статью полностью</a>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="articles__slide-img">
+                                <img src="./img/articles.jpg" alt="">
+                            </div>
+                            <div class="articles__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <p>Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.</p>
+                                <a href="#!">Читать статью полностью</a>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="articles__slide-img">
+                                <img src="./img/articles.jpg" alt="">
+                            </div>
+                            <div class="articles__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <p>Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.</p>
+                                <a href="#!">Читать статью полностью</a>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- If we need pagination -->
+                    </div>
+                    <div class="articles__pagination swiper-pagination"></div>
+                    <div class="articles__arrows arrows">
+                        <div class="articles__arrow-left" id="articles-left">
+                            <img src="./img/icons/left-arrow-mob.svg" alt="left">
+                        </div>
+                            <div class="articles__arrow-right" id="articles-right">
+                            <img src="./img/icons/right-arrow-mob.svg" alt="right">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="press">
+            <div class="container">
+                <h2 class="press__heading heading">Статьи</h2>
+                <div class="press__content">
+                    <div class="pressSwiper">
+                        <div class="swiper-wrapper">
+                          <div class="swiper-slide">
+                            <div class="press__slide-img">
+                                <img src="./img/press.png" alt="">
+                            </div>
+                            <div class="press__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <p>Май 2021</p>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="press__slide-img">
+                                <img src="./img/press.png" alt="">
+                            </div>
+                            <div class="press__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <p>Май 2021</p>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="press__slide-img">
+                                <img src="./img/press.png" alt="">
+                            </div>
+                            <div class="press__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <p>Май 2021</p>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="press__slide-img">
+                                <img src="./img/press.png" alt="">
+                            </div>
+                            <div class="press__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <p>Май 2021</p>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- If we need pagination -->
+                    </div>
+                    <div class="press__pagination swiper-pagination"></div>
+                    <div class="press__arrows arrows">
+                        <div class="press__arrow-left" id="press-left">
+                            <img src="./img/icons/left-arrow-mob.svg" alt="left">
+                        </div>
+                            <div class="press__arrow-right" id="press-right">
+                            <img src="./img/icons/right-arrow-mob.svg" alt="right">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about__content">
+                    <span>О нас</span>
+                    <h2 class="heading">VILLAGIO ESTATE — ВЕДУЩИЙ БРЕНД ЭЛИТНОЙ НЕДВИЖИМОСТИ</h2>
+                    <div class="about__columns">
+                        <p>Компания создала и продолжает развивать ряд выдающихся проектов в Москве, ближайшем Подмосковье и ОАЭ. Исключительная экспертиза позволила нам выйти за рамки девелопмента и собственных объектов. Так появились подразделения Villagio Realty, а также Villagio Moscow,</p>
+                        <p>которое оказывает услуги в столице. Понимая все тонкости индустрии, наши эксперты станут вашими доверенными лицами и возьмут на себя заботы, связанные с жилым и коммерческим имуществом.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact">
+            <div class="container">
+                <div class="contact__content">
+                    <span>villagio</span>
+                    <h2>Заинтересовала покупка?</h2>
+                    <p>Оставьте заявку и мы поможем вам на всех этапах покупки объекта</p>
+                </div>
+                <div class="contact__form">
+
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./js/just-validate.min.js"></script>
+    <script src="./js/inputmask.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
