--- a/index.html
+++ b/index.html
@@ -659,14 +659,71 @@
                     <p>Оставьте заявку и мы поможем вам на всех этапах покупки объекта</p>
                 </div>
                 <div class="contact__form">
-
+                    <form class="contactForm">
+                        <div class="contactForm__input">
+                            <input type="tel" placeholder="+7 000 000 00 00">
+                        </div>
+                        <div class="contactForm__input">
+                            <input type="text" placeholder="Ваше имя">
+                        </div>
+                        <div class="contactForm__btn">
+                            <button class="black-btn">Заказать звонок</button>
+                        </div>
+                    </form>
+                    <p class="contactForm__agree">Отправляя запрос вы соглашаетесь с <a href="#!">политикой конфиденциальности</a></p>
+                    <div class="contact__form-call">
+                        <span>Или позвоните по номеру</span>
+                        <a href="tel:+70000000000">+7 000 000 00 00</a>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__logo">
+                    <img src="./img/icons/logo.svg" alt="logo">
+                </div>
+                <div class="footer__main">
+                    <div class="footer__form">
+                        <h2>Остались вопросы?</h2>
+                        <p class="footer__form-p">Укажите свои контакты, и наш эксперт свяжется с вами в ближайшее время</p>
+                        <form class="footerForm">
+                            <div class="footerForm__input">
+                                <input type="tel" placeholder="+7 000 000 00 00">
+                            </div>
+                            <div class="footerForm__input">
+                                <input type="text" placeholder="Ваше имя">
+                            </div>
+                            <div class="footerForm__btn">
+                                <button class="black-white-btn">Заказать звонок</button>
+                            </div>
+                        </form>
+                        <p class="contactForm__agree">Отправляя запрос вы соглашаетесь с <a href="#!">политикой конфиденциальности</a></p>
+                    </div>
+                    <div class="footer__nav">
+                        <ul class="footer__list">
+                            <li class="footer__item">Раздел сайта</li>
+                            <li class="footer__item">Раздел сайта</li>
+                            <li class="footer__item">Раздел сайта</li>
+                            <li class="footer__item">Раздел сайта</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer__bottom">
+                    <div class="footer__copyright">
+                        <p>Copyright © Villagio Estate 2023</p>
+                    </div>
+                    <div class="footer__links">
+                        <a href="#!">Пользовательское соглашение</a>
+                        <a href="#!">Политика конфиденциальности</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./js/just-validate.min.js"></script>
-    <script src="./js/inputmask.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
 </html>
