--- a/index.html
+++ b/index.html
@@ -24,8 +24,66 @@
                     <div class="header__control">
                         <img src="./img/icons/phone.svg" alt="phone">
                     </div>
-                    <div class="header__control">
+                    <div class="header__control open-mob-nav">
                         <img src="./img/icons/sandwich.svg" alt="sandwich">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mob-menu">
+            <div class="container">
+                <div class="mob-menu__content">
+                    <div class="mob-menu-icons">
+                        <div class="mob-logo">
+                            <img src="./img/icons/logo-white.svg" alt="logo">
+                            <p>Villagio Moscow</p>
+                        </div>
+                        <div class="mob-close close-mob-nav">
+                            <img src="./img/icons/mob-menu-close.svg" alt="close">
+                        </div>
+                    </div>
+                    <ul class="mob-list">
+                        <li class="mob-item">
+                            <div class="mob-span__wrapper">
+                                <span>01</span>
+                            </div>
+                            <div class="mob-link__wrapper">
+                                <a href="#!">Продажа</a>
+                            </div>
+                        </li>
+                        <li class="mob-item">
+                            <div class="mob-span__wrapper">
+                                <span>02</span>
+                            </div>
+                            <div class="mob-link__wrapper">
+                                <a href="#!">Покупка</a>
+                            </div>
+                        </li>
+                        <li class="mob-item">
+                            <div class="mob-span__wrapper">
+                                <span>03</span>
+                            </div>
+                            <div class="mob-link__wrapper">
+                                <a href="#!">Коммерция</a>
+                            </div>
+                        </li>
+                        <li class="mob-item">
+                            <div class="mob-span__wrapper">
+                                <span>04</span>
+                            </div>
+                            <div class="mob-link__wrapper">
+                                <a href="#!">Подборки</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="mob-menu__bottom">
+                        <p>Покупка и продажа недвижимости DeLuxe  класса в Москве</p>
+                        <div class="svg__wrapper">
+                            <svg width="116" height="2" viewBox="0 0 116 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path opacity="0.32" d="M0 1H116" stroke="white" />
+                              </svg>
+                        </div>
+                        <a href="tel:+70000000000">+7 000 000 00 00</a>
                     </div>
                 </div>
             </div>
@@ -39,153 +97,7 @@
         </div>
     </header>
     <main class="main">
-        <!-- <section class="best">
-            <div class="container">
-                <h2 class="best__heading heading">Лучшие предложения рынка элитной недвижимости</h2>
-                <div class="best__swiper-wrapper">
-                    <div class="bestSwiper">
-                        <div class="swiper-wrapper">
-                          <div class="swiper-slide">
-                            <div class="best__swiper-img">
-                                <img src="./img/best.jpg" alt="">
-                            </div>
-                            <div class="best__swiper-text">
-                                <div class="best__swiper-left">
-                                    <div>
-                                        <div class="green-ball"></div>
-                                        <span>Шелепихенская набережная дом 1489</span>
-                                    </div>
-                                    <h3>Название объекта</h3>
-                                </div>
-                                <div class="best__swiper-center">
-                                    <span>130 000 000 ₽</span>
-                                    <span>7 этаж</span>
-                                    <span>105 м2</span>
-                                </div>
-                                <div class="best__swiper-right">
-                                    <a href="#!">Подробнее</a>
-                                </div>
-                            </div>
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="best__swiper-img">
-                                <img src="./img/best.jpg" alt="">
-                            </div>
-                            <div class="best__swiper-text">
-                                <div class="best__swiper-left">
-                                    <div>
-                                        <div class="green-ball"></div>
-                                        <span>Шелепихенская набережная дом 1489</span>
-                                    </div>
-                                    <h3>Название объекта</h3>
-                                </div>
-                                <div class="best__swiper-center">
-                                    <span>130 000 000 ₽</span>
-                                    <span>7 этаж</span>
-                                    <span>105 м2</span>
-                                </div>
-                                <div class="best__swiper-right">
-                                    <a href="#!">Подробнее</a>
-                                </div>
-                            </div>
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="best__swiper-img">
-                                <img src="./img/best.jpg" alt="">
-                            </div>
-                            <div class="best__swiper-text">
-                                <div class="best__swiper-left">
-                                    <div>
-                                        <div class="green-ball"></div>
-                                        <span>Шелепихенская набережная дом 1489</span>
-                                    </div>
-                                    <h3>Название объекта</h3>
-                                </div>
-                                <div class="best__swiper-center">
-                                    <span>130 000 000 ₽</span>
-                                    <span>7 этаж</span>
-                                    <span>105 м2</span>
-                                </div>
-                                <div class="best__swiper-right">
-                                    <a href="#!">Подробнее</a>
-                                </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    <div class="best__swiper-arrows">
-                        <div class="best__swiper-left__arrow" id="best-left">
-                            <img src="./img/icons/left-arrow.svg" alt="left arrow">
-                        </div>
-                        <div class="best__swiper-right__arrow" id="best-right">
-                            <img src="./img/icons/right-arrow.svg" alt="right arrow">
-                        </div>
-                    </div>
-                </div>
-                <div class="best__second-swiper">
-                    <div class="bestSwiper2">
-                        <div class="swiper-wrapper">
-                          <div class="swiper-slide">
-                            <div class="bestSwiper2__img">
-                                <img src="./img/best-small.jpg" alt="">
-                            </div>
-                            <div class="bestSwiper2__content">
-                                <div class="bestSwiper2__name">
-                                    <div class="green-ball"></div>
-                                    <h3>Квартира в Opus</h3>
-                                </div>
-                                <div class="bestSwiper2__tech">
-                                    <span>105 м2</span>
-                                    <span>7 этаж</span>
-                                    <span>130 000 000 ₽</span>
-                                </div>
-                            </div>
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="bestSwiper2__img">
-                                <img src="./img/best-small.jpg" alt="">
-                            </div>
-                            <div class="bestSwiper2__content">
-                                <div class="bestSwiper2__name">
-                                    <div class="green-ball"></div>
-                                    <h3>Квартира в Opus</h3>
-                                </div>
-                                <div class="bestSwiper2__tech">
-                                    <span>105 м2</span>
-                                    <span>7 этаж</span>
-                                    <span>130 000 000 ₽</span>
-                                </div>
-                            </div>
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="bestSwiper2__img">
-                                <img src="./img/best-small.jpg" alt="">
-                            </div>
-                            <div class="bestSwiper2__content">
-                                <div class="bestSwiper2__name">
-                                    <div class="green-ball"></div>
-                                    <h3>Квартира в Opus</h3>
-                                </div>
-                                <div class="bestSwiper2__tech">
-                                    <span>105 м2</span>
-                                    <span>7 этаж</span>
-                                    <span>130 000 000 ₽</span>
-                                </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="best__second-arrows">
-                        <div class="best__second-left" id="best2-left">
-                            <img src="./img/icons/left-arrow.svg" alt="left">
-                        </div>
-                        <div class="best__second-right" id="best2-right">
-                            <img src="./img/icons/right-arrow.svg" alt="left">
-                        </div>
-                      </div>
-                </div>
-            </div>
-        </section> -->
+
         <section class="premium">
             <div class="container">
                 <h2 class="heading premium__heading">Подборки премиальной недвижимости от наших экспертов</h2>
