--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <p>Villagio Moscow</p>
                 </div>
                 <div class="header__controls">
-                    <div class="header__control">
+                    <div class="header__control open-popup">
                         <img src="./img/icons/phone.svg" alt="phone">
                     </div>
                     <div class="header__control open-mob-nav">
@@ -278,8 +278,8 @@
                     </div>
                     <div class="book1__text">
                         <span>Selection of residential</span>
-                        <h2 class="heading">ПОЛУЧИТЕ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ В СТРОЯЩИХСЯ  ПРОЕКТАХ МОСКВЫ</h2>
-                        <button class="white-btn">Смотреть все</button>
+                        <h2 class="heading">ТОП-10 НОВОСТРОЕК ПОЛУЧИТЕ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ В СТРОЯЩИХСЯ  ПРОЕКТАХ МОСКВЫ</h2>
+                        <button class="black-btn">Получить каталог</button>
                     </div>
                 </div>
             </div>
@@ -450,7 +450,7 @@
                     <div class="book2__text">
                         <span>DeLuxe secondary market</span>
                         <h2 class="heading">ПРЕДЛАГАЕМ КОЛЛЕКЦИЮ РОСКОШНЫХ КВАРТИР НА ВТОРИЧНОМ РЫНКЕ</h2>
-                        <button class="white-btn">Получить каталог</button>
+                        <button class="black-btn">Получить подборку</button>
                     </div>
                 </div>
             </div>
@@ -518,7 +518,7 @@
         </section>
         <section class="press">
             <div class="container">
-                <h2 class="press__heading heading">Статьи</h2>
+                <h2 class="press__heading heading">Пресса о нас</h2>
                 <div class="press__content">
                     <div class="pressSwiper">
                         <div class="swiper-wrapper">
@@ -668,6 +668,38 @@
             </div>
         </div>
     </footer>
+    <aside class="popup">
+            <div class="container">
+                <div class="popup__content">
+                    <div class="popup__img">
+                        <img src="./img/icons/popup-icon-desk.svg" alt="logo">
+                    </div>
+                    <div class="popup__text">
+                        <div class="popup__head">
+                            <h2 class="popup__heading">Хотите узнать подробнее или купить объект?</h2>
+                            <p class="popup__offer">Укажите свои контакты, и наш эксперт свяжется с вами в ближайшее время</p>
+                        </div>
+                        <div class="popup__form">
+                            <form class="popupForm">
+                                <div class="popupForm__input">
+                                    <input type="tel" placeholder="+7 000 000 00 00">
+                                </div>
+                                <div class="popupForm__input">
+                                    <input type="text" placeholder="Ваше имя">
+                                </div>
+                                <div class="popupForm__btn">
+                                    <button class="red-btn">Заказать звонок</button>
+                                </div>
+                                <p class="popupForm__agree">Отправляя запрос вы соглашаетесь с <a href="#!">политикой конфиденциальности</a></p>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="popup__close">
+                        <img src="./img/icons/close-popup.svg" alt="close">
+                    </div>
+                </div>
+            </div>
+    </aside>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
