--- a/index.html
+++ b/index.html
@@ -22,11 +22,26 @@
                     <p>Villagio Moscow</p>
                 </div>
                 <div class="header__controls">
+                    <div class="header__control header__control-telegram">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M19.5525 2.99693C19.3118 3.01479 19.0755 3.07126 18.8528 3.16418H18.8498C18.636 3.24893 17.6198 3.67643 16.0748 4.32443L10.5383 6.65618C6.56553 8.32868 2.66028 9.97568 2.66028 9.97568L2.70678 9.95768C2.70678 9.95768 2.43753 10.0462 2.15628 10.2389C1.98213 10.349 1.83252 10.4938 1.71678 10.6642C1.57878 10.8667 1.46778 11.1764 1.50903 11.4967C1.57653 12.0382 1.92753 12.3629 2.17953 12.5422C2.43453 12.7237 2.67753 12.8084 2.67753 12.8084H2.68353L6.34578 14.0422C6.51003 14.5694 7.46178 17.6984 7.69053 18.4192C7.82553 18.8497 7.95678 19.1189 8.12103 19.3244C8.19953 19.4294 8.29428 19.5172 8.40528 19.5877C8.46293 19.6223 8.52499 19.6491 8.58978 19.6672L8.55228 19.6582C8.56353 19.6612 8.57253 19.6702 8.58078 19.6732C8.61078 19.6814 8.63103 19.6844 8.66928 19.6904C9.24903 19.8659 9.71478 19.5059 9.71478 19.5059L9.74103 19.4849L11.9033 17.5162L15.5273 20.2964L15.6098 20.3317C16.365 20.6632 17.13 20.4787 17.5343 20.1532C17.9415 19.8254 18.0998 19.4062 18.0998 19.4062L18.126 19.3387L20.9265 4.99193C21.006 4.63793 21.0263 4.30643 20.9385 3.98468C20.8485 3.65882 20.6395 3.37861 20.3528 3.19943C20.1124 3.05318 19.8336 2.98262 19.5525 2.99693ZM19.4768 4.53443C19.4738 4.58168 19.4828 4.57643 19.4618 4.66718V4.67543L16.6875 18.8729C16.6755 18.8932 16.6553 18.9374 16.5998 18.9817C16.5413 19.0282 16.4948 19.0574 16.251 18.9607L11.8185 15.5624L9.14103 18.0029L9.70353 14.4104L16.9455 7.66043C17.244 7.38293 17.1443 7.32443 17.1443 7.32443C17.1653 6.98393 16.6935 7.22468 16.6935 7.22468L7.56153 12.8819L7.55853 12.8669L3.18153 11.3932V11.3902L3.17028 11.3879L3.19278 11.3789L3.21678 11.3669L3.24003 11.3587C3.24003 11.3587 7.14828 9.71168 11.121 8.03918C13.11 7.20143 15.114 6.35768 16.6553 5.70668C17.5693 5.32193 18.4843 4.93943 19.4003 4.55918C19.4618 4.53518 19.4325 4.53443 19.4768 4.53443Z" fill="white" />
+                        </svg>
+                    </div>
+                    <div class="header__control header__control-whatsapp">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.88598 7.17004C9.06898 7.17504 9.27198 7.18504 9.46498 7.61304C9.59298 7.89804 9.80798 8.42304 9.98398 8.85104C10.121 9.18404 10.233 9.45804 10.261 9.51404C10.325 9.64204 10.365 9.78904 10.281 9.96204L10.253 10.02C10.1961 10.1546 10.1185 10.2795 10.023 10.39L9.87998 10.56C9.79498 10.664 9.70998 10.766 9.63798 10.838C9.50898 10.966 9.37598 11.104 9.52398 11.36C9.67198 11.616 10.192 12.458 10.959 13.137C11.52 13.643 12.1636 14.0489 12.862 14.337C12.932 14.367 12.9886 14.3924 13.032 14.413C13.289 14.541 13.442 14.521 13.59 14.349C13.739 14.176 14.233 13.6 14.407 13.344C14.575 13.088 14.747 13.128 14.985 13.216C15.223 13.305 16.489 13.926 16.746 14.053L16.889 14.123C17.068 14.208 17.189 14.267 17.241 14.353C17.305 14.462 17.305 14.973 17.093 15.575C16.875 16.175 15.826 16.751 15.351 16.795L15.216 16.811C14.78 16.863 14.228 16.931 12.26 16.156C9.83398 15.202 8.23298 12.836 7.90998 12.357L7.85698 12.281L7.85098 12.273C7.70398 12.076 6.80298 10.871 6.80298 9.62704C6.80298 8.43704 7.38998 7.81704 7.65698 7.53504L7.70398 7.48504C7.7904 7.38741 7.89599 7.30862 8.01419 7.25357C8.13238 7.19851 8.26064 7.16838 8.39098 7.16504C8.56398 7.16504 8.73798 7.16504 8.88598 7.17004Z" fill="white" />
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M2.18398 21.331C2.16514 21.3988 2.16451 21.4704 2.18217 21.5385C2.19982 21.6066 2.23512 21.6689 2.28452 21.719C2.33392 21.7691 2.39566 21.8053 2.46351 21.8239C2.53137 21.8425 2.60293 21.8429 2.67098 21.825L7.27798 20.621C8.73967 21.4128 10.3757 21.8276 12.038 21.828H12.042C17.528 21.828 22 17.382 22 11.916C22.0034 10.6126 21.7475 9.32149 21.2472 8.11785C20.7469 6.91422 20.0123 5.8221 19.086 4.90505C18.1613 3.98046 17.0629 3.24782 15.854 2.74927C14.6451 2.25072 13.3496 1.9961 12.042 2.00005C6.55598 2.00005 2.08398 6.44604 2.08398 11.911C2.08398 13.65 2.54198 15.358 3.41398 16.865L2.18398 21.331ZM4.86098 17.263C4.91386 17.0711 4.928 16.8706 4.90259 16.6732C4.87718 16.4757 4.81273 16.2853 4.71298 16.113C3.97413 14.8358 3.58473 13.3866 3.58398 11.911C3.58398 7.28104 7.37698 3.50005 12.042 3.50005C14.312 3.50005 16.43 4.37705 18.028 5.96805C18.8142 6.74575 19.4377 7.67223 19.8622 8.69344C20.2866 9.71465 20.5034 10.8102 20.5 11.916C20.5 16.546 16.707 20.328 12.042 20.328H12.037C10.6247 20.3273 9.23481 19.9747 7.99298 19.302C7.65827 19.1208 7.26719 19.0737 6.89898 19.17L4.13698 19.891L4.86098 17.263Z" fill="white" />
+                        </svg>
+                    </div>
                     <div class="header__control open-popup">
-                        <img src="./img/icons/phone.svg" alt="phone">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M8.76798 2.19193C9.79848 2.04993 10.665 2.68043 11.075 3.49993L12.0835 5.51643C12.643 6.63543 12.3215 7.94843 11.4735 8.77443C10.9725 9.26193 10.469 9.81893 10.177 10.3104C10.1576 10.3454 10.1515 10.3863 10.16 10.4254C10.43 11.8884 11.4215 13.3339 12.306 14.3704C12.3506 14.4197 12.4086 14.4548 12.473 14.4714C12.5373 14.488 12.6051 14.4854 12.668 14.4639L14.6555 13.8429C15.1909 13.6756 15.7658 13.6841 16.2959 13.8673C16.8261 14.0505 17.2836 14.3988 17.6015 14.8609L19.04 16.9534C19.43 17.5209 19.6275 18.2909 19.3285 19.0314C19.0615 19.6929 18.545 20.6469 17.6055 21.2814C16.6305 21.9394 15.295 22.1894 13.5475 21.5904C11.595 20.9204 9.75048 19.2404 8.22098 17.0919C6.68248 14.9299 5.41598 12.2294 4.64798 9.41343C3.92198 6.75493 4.35998 4.96493 5.39098 3.81243C6.38548 2.70043 7.81048 2.32343 8.76798 2.19193ZM9.95648 4.05893C9.72798 3.60243 9.32048 3.37693 8.93798 3.42943C8.08748 3.54643 7.02248 3.86293 6.32298 4.64543C5.65998 5.38693 5.20098 6.69293 5.85298 9.08443C6.58548 11.7684 7.79148 14.3334 9.23898 16.3669C10.6955 18.4134 12.3505 19.8584 13.9525 20.4079C15.38 20.8974 16.2975 20.6554 16.9055 20.2454C17.5485 19.8109 17.944 19.1204 18.169 18.5634C18.272 18.3084 18.2275 17.9784 18.0095 17.6614L16.571 15.5694C16.4045 15.3273 16.1649 15.1449 15.8872 15.0489C15.6096 14.9529 15.3084 14.9483 15.028 15.0359L13.0405 15.6569C12.4465 15.8424 11.7775 15.6769 11.355 15.1819C10.4345 14.1034 9.26148 12.4494 8.92998 10.6519C8.86666 10.3151 8.92778 9.96664 9.10198 9.67143C9.48098 9.03443 10.081 8.38493 10.6005 7.87893C11.108 7.38493 11.252 6.64993 10.965 6.07543L9.95648 4.05893Z" fill="white" />
+                        </svg>
                     </div>
                     <div class="header__control open-mob-nav">
-                        <img src="./img/icons/sandwich.svg" alt="sandwich">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M3 7.625C3 7.27982 3.27982 7 3.625 7H20.625C20.9702 7 21.25 7.27982 21.25 7.625C21.25 7.97018 20.9702 8.25 20.625 8.25H3.625C3.27982 8.25 3 7.97018 3 7.625ZM6 12.125C6 11.7798 6.27982 11.5 6.625 11.5H17.625C17.9702 11.5 18.25 11.7798 18.25 12.125C18.25 12.4702 17.9702 12.75 17.625 12.75H6.625C6.27982 12.75 6 12.4702 6 12.125ZM3 16.625C3 16.2798 3.27982 16 3.625 16H20.625C20.9702 16 21.25 16.2798 21.25 16.625C21.25 16.9702 20.9702 17.25 20.625 17.25H3.625C3.27982 17.25 3 16.9702 3 16.625Z" fill="white" />
+                        </svg>
                     </div>
                 </div>
             </div>
@@ -526,7 +541,7 @@
                                         <h3>Квартира в Opus</h3>
                                     </div>
                                     <div class="secondary__card-info">
-                                        <div>
+                                        <div class="secondary__card-info__list">
                                             <p class="card-square">105 м2</p>
                                             <p class="card-floor">7 этаж</p>
                                             <p class="card-price">130 000 000 ₽</p>
@@ -549,7 +564,7 @@
                                         <h3>Квартира в Opus</h3>
                                     </div>
                                     <div class="secondary__card-info">
-                                        <div>
+                                        <div class="secondary__card-info__list">
                                             <p class="card-square">105 м2</p>
                                             <p class="card-floor">7 этаж</p>
                                             <p class="card-price">130 000 000 ₽</p>
@@ -572,7 +587,7 @@
                                         <h3>Квартира в Opus</h3>
                                     </div>
                                     <div class="secondary__card-info">
-                                        <div>
+                                        <div class="secondary__card-info__list">
                                             <p class="card-square">105 м2</p>
                                             <p class="card-floor">7 этаж</p>
                                             <p class="card-price">130 000 000 ₽</p>
@@ -595,7 +610,30 @@
                                         <h3>Квартира в Opus</h3>
                                     </div>
                                     <div class="secondary__card-info">
-                                        <div>
+                                        <div class="secondary__card-info__list">
+                                            <p class="card-square">105 м2</p>
+                                            <p class="card-floor">7 этаж</p>
+                                            <p class="card-price">130 000 000 ₽</p>
+                                        </div>
+                                        <div class="secondary__card-link">
+                                            <a href="#!">Подробнее</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="secondary__item">
+                            <div class="secondary__img">
+                                <img src="./img/secondary.jpg" alt="secondary">
+                            </div>
+                            <div class="secondary__card-content">
+                                <div class="secondary__card-text">
+                                    <div class="secodary__card-name">
+                                        <div class="green-ball"></div>
+                                        <h3>Квартира в OpusКвартира в OpusКвартира в Opus</h3>
+                                    </div>
+                                    <div class="secondary__card-info">
+                                        <div class="secondary__card-info__list">
                                             <p class="card-square">105 м2</p>
                                             <p class="card-floor">7 этаж</p>
                                             <p class="card-price">130 000 000 ₽</p>
@@ -618,30 +656,7 @@
                                         <h3>Квартира в Opus</h3>
                                     </div>
                                     <div class="secondary__card-info">
-                                        <div>
-                                            <p class="card-square">105 м2</p>
-                                            <p class="card-floor">7 этаж</p>
-                                            <p class="card-price">130 000 000 ₽</p>
-                                        </div>
-                                        <div class="secondary__card-link">
-                                            <a href="#!">Подробнее</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="secondary__item">
-                            <div class="secondary__img">
-                                <img src="./img/secondary.jpg" alt="secondary">
-                            </div>
-                            <div class="secondary__card-content">
-                                <div class="secondary__card-text">
-                                    <div class="secodary__card-name">
-                                        <div class="green-ball"></div>
-                                        <h3>Квартира в Opus</h3>
-                                    </div>
-                                    <div class="secondary__card-info">
-                                        <div>
+                                        <div class="secondary__card-info__list">
                                             <p class="card-square">105 м2</p>
                                             <p class="card-floor">7 этаж</p>
                                             <p class="card-price">130 000 000 ₽</p>
@@ -686,8 +701,10 @@
                             </div>
                             <div class="articles__slide-text">
                                 <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
-                                <p>Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.</p>
-                                <a href="#!">Читать статью полностью</a>
+                                <p>Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.</p>
+                                <div class="articles__slide-link">
+                                    <a href="#!">Читать статью полностью</a>
+                                </div>
                             </div>
                           </div>
                           <div class="swiper-slide">
@@ -695,19 +712,23 @@
                                 <img src="./img/articles.jpg" alt="">
                             </div>
                             <div class="articles__slide-text">
-                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <h4>Эксперты прогнозируют</h4>
                                 <p>Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.</p>
-                                <a href="#!">Читать статью полностью</a>
+                                <div class="articles__slide-link">
+                                    <a href="#!">Читать статью полностью</a>
+                                </div>
                             </div>
                           </div>
                           <div class="swiper-slide">
                             <div class="articles__slide-img">
-                                <img src="./img/articles.jpg" alt="">
+                                <img src="./img/best.jpg" alt="">
                             </div>
                             <div class="articles__slide-text">
                                 <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
                                 <p>Сюда можно вставить описание из самой подборки. Апартаменты в реконструированном купеческом особняке 1855 года. В историческом центре Москвы, недалеко от Чистых прудов.</p>
-                                <a href="#!">Читать статью полностью</a>
+                                <div class="articles__slide-link">
+                                    <a href="#!">Читать статью полностью</a>
+                                </div>
                             </div>
                           </div>
                           <div class="swiper-slide">
@@ -747,7 +768,20 @@
                             </div>
                             <div class="press__slide-text">
                                 <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
-                                <p>Май 2021</p>
+                                <div class="press__slide-year">
+                                    <p>Май 2021</p>
+                                </div>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="press__slide-img">
+                                <img src="./img/best.jpg" alt="">
+                            </div>
+                            <div class="press__slide-text">
+                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 годуЭксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
+                                <div class="press__slide-year">
+                                    <p>Май 2021</p>
+                                </div>
                             </div>
                           </div>
                           <div class="swiper-slide">
@@ -756,16 +790,9 @@
                             </div>
                             <div class="press__slide-text">
                                 <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
-                                <p>Май 2021</p>
-                            </div>
-                          </div>
-                          <div class="swiper-slide">
-                            <div class="press__slide-img">
-                                <img src="./img/press.png" alt="">
-                            </div>
-                            <div class="press__slide-text">
-                                <h4>Эксперты прогнозируют рост цен на вторичную недвижимость 1489 году</h4>
-                                <p>Май 2021</p>
+                                <div class="press__slide-year">
+                                    <p>Май 2021</p>
+                                </div>
                             </div>
                           </div>
                           <div class="swiper-slide">
